src/main/java/net/unixcode/rts/parser/antlr/stfParser.java
// Generated from stf.g4 by ANTLR 4.3

  package net.unixcode.rts.parser.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class stfParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAGIC_HEADING_1=1, LEFT_PAREN=2, RIGHT_PAREN=3, STRING=4, SYMBOL=5, LEFT_BRACKET=6, 
		RIGHT_BRACKET=7, PLUS=8, ANY_LETTER=9, CAPITAL_LETTER=10, LETTER=11, CYR_LETTER=12, 
		DIGIT=13, DASH=14, DOT=15, WS=16, NEWLINE=17;
	public static final String[] tokenNames = {
		"<INVALID>", "'SIMISA@@@@@@@@@@JINX0t1t______'", "'('", "')'", "STRING", 
		"SYMBOL", "'['", "']'", "'+'", "ANY_LETTER", "CAPITAL_LETTER", "LETTER", 
		"CYR_LETTER", "DIGIT", "'-'", "'.'", "WS", "NEWLINE"
	};
	public static final int
		RULE_stf = 0, RULE_heading = 1, RULE_node = 2, RULE_space = 3, RULE_nodeName = 4, 
		RULE_nodeList = 5, RULE_nodeListDelim = 6, RULE_nodeListItem = 7, RULE_term = 8, 
		RULE_string = 9, RULE_word = 10, RULE_number = 11;
	public static final String[] ruleNames = {
		"stf", "heading", "node", "space", "nodeName", "nodeList", "nodeListDelim", 
		"nodeListItem", "term", "string", "word", "number"
	};

	@Override
	public String getGrammarFileName() { return "stf.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public stfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StfContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(stfParser.EOF, 0); }
		public List<SpaceContext> space() {
			return getRuleContexts(SpaceContext.class);
		}
		public HeadingContext heading() {
			return getRuleContext(HeadingContext.class,0);
		}
		public SpaceContext space(int i) {
			return getRuleContext(SpaceContext.class,i);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public StfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterStf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitStf(this);
		}
	}

	public final StfContext stf() throws RecognitionException {
		StfContext _localctx = new StfContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24); heading();
			setState(26);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(25); space();
				}
			}

			setState(28); node();
			setState(30);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(29); space();
				}
				break;
			}
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ANY_LETTER) {
				{
				{
				setState(32); node();
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(39);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(38); space();
				}
			}

			setState(41); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadingContext extends ParserRuleContext {
		public TerminalNode MAGIC_HEADING_1() { return getToken(stfParser.MAGIC_HEADING_1, 0); }
		public HeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_heading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitHeading(this);
		}
	}

	public final HeadingContext heading() throws RecognitionException {
		HeadingContext _localctx = new HeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_heading);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); match(MAGIC_HEADING_1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public TerminalNode RIGHT_PAREN() { return getToken(stfParser.RIGHT_PAREN, 0); }
		public NodeNameContext nodeName() {
			return getRuleContext(NodeNameContext.class,0);
		}
		public NodeListContext nodeList() {
			return getRuleContext(NodeListContext.class,0);
		}
		public List<SpaceContext> space() {
			return getRuleContexts(SpaceContext.class);
		}
		public SpaceContext space(int i) {
			return getRuleContext(SpaceContext.class,i);
		}
		public TerminalNode LEFT_PAREN() { return getToken(stfParser.LEFT_PAREN, 0); }
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitNode(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); nodeName();
			setState(47);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(46); space();
				}
			}

			setState(49); match(LEFT_PAREN);
			setState(51);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(50); space();
				}
				break;
			}
			setState(54);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << SYMBOL) | (1L << ANY_LETTER) | (1L << CYR_LETTER) | (1L << DIGIT) | (1L << DASH))) != 0)) {
				{
				setState(53); nodeList();
				}
			}

			setState(57);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(56); space();
				}
			}

			setState(59); match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpaceContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(stfParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(stfParser.WS); }
		public SpaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_space; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterSpace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitSpace(this);
		}
	}

	public final SpaceContext space() throws RecognitionException {
		SpaceContext _localctx = new SpaceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_space);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(61); match(WS);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(64); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeNameContext extends ParserRuleContext {
		public List<TerminalNode> ANY_LETTER() { return getTokens(stfParser.ANY_LETTER); }
		public TerminalNode ANY_LETTER(int i) {
			return getToken(stfParser.ANY_LETTER, i);
		}
		public TerminalNode DIGIT(int i) {
			return getToken(stfParser.DIGIT, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(stfParser.DIGIT); }
		public NodeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterNodeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitNodeName(this);
		}
	}

	public final NodeNameContext nodeName() throws RecognitionException {
		NodeNameContext _localctx = new NodeNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nodeName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); match(ANY_LETTER);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ANY_LETTER || _la==DIGIT) {
				{
				{
				setState(67);
				_la = _input.LA(1);
				if ( !(_la==ANY_LETTER || _la==DIGIT) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeListContext extends ParserRuleContext {
		public List<NodeListItemContext> nodeListItem() {
			return getRuleContexts(NodeListItemContext.class);
		}
		public List<NodeListDelimContext> nodeListDelim() {
			return getRuleContexts(NodeListDelimContext.class);
		}
		public NodeListItemContext nodeListItem(int i) {
			return getRuleContext(NodeListItemContext.class,i);
		}
		public NodeListDelimContext nodeListDelim(int i) {
			return getRuleContext(NodeListDelimContext.class,i);
		}
		public NodeListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterNodeList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitNodeList(this);
		}
	}

	public final NodeListContext nodeList() throws RecognitionException {
		NodeListContext _localctx = new NodeListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nodeList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73); nodeListItem();
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(74); nodeListDelim();
					setState(75); nodeListItem();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeListDelimContext extends ParserRuleContext {
		public SpaceContext space() {
			return getRuleContext(SpaceContext.class,0);
		}
		public NodeListDelimContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeListDelim; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterNodeListDelim(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitNodeListDelim(this);
		}
	}

	public final NodeListDelimContext nodeListDelim() throws RecognitionException {
		NodeListDelimContext _localctx = new NodeListDelimContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nodeListDelim);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); space();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeListItemContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public NodeListItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeListItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterNodeListItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitNodeListItem(this);
		}
	}

	public final NodeListItemContext nodeListItem() throws RecognitionException {
		NodeListItemContext _localctx = new NodeListItemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_nodeListItem);
		try {
			setState(86);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84); node();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85); term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_term);
		try {
			setState(91);
			switch (_input.LA(1)) {
			case SYMBOL:
			case ANY_LETTER:
			case CYR_LETTER:
				enterOuterAlt(_localctx, 1);
				{
				setState(88); word();
				}
				break;
			case DIGIT:
			case DASH:
				enterOuterAlt(_localctx, 2);
				{
				setState(89); number();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(90); string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRING(int i) {
			return getToken(stfParser.STRING, i);
		}
		public List<SpaceContext> space() {
			return getRuleContexts(SpaceContext.class);
		}
		public SpaceContext space(int i) {
			return getRuleContext(SpaceContext.class,i);
		}
		public List<TerminalNode> STRING() { return getTokens(stfParser.STRING); }
		public List<TerminalNode> PLUS() { return getTokens(stfParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(stfParser.PLUS, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(STRING);
			setState(95);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(94); space();
				}
				break;
			}
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS) {
				{
				{
				setState(97); match(PLUS);
				setState(99);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(98); space();
					}
				}

				setState(101); match(STRING);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WordContext extends ParserRuleContext {
		public TerminalNode ANY_LETTER(int i) {
			return getToken(stfParser.ANY_LETTER, i);
		}
		public TerminalNode CYR_LETTER(int i) {
			return getToken(stfParser.CYR_LETTER, i);
		}
		public List<TerminalNode> SYMBOL() { return getTokens(stfParser.SYMBOL); }
		public TerminalNode PLUS(int i) {
			return getToken(stfParser.PLUS, i);
		}
		public TerminalNode DOT(int i) {
			return getToken(stfParser.DOT, i);
		}
		public List<TerminalNode> DASH() { return getTokens(stfParser.DASH); }
		public TerminalNode SYMBOL(int i) {
			return getToken(stfParser.SYMBOL, i);
		}
		public List<TerminalNode> ANY_LETTER() { return getTokens(stfParser.ANY_LETTER); }
		public List<TerminalNode> DOT() { return getTokens(stfParser.DOT); }
		public TerminalNode DIGIT(int i) {
			return getToken(stfParser.DIGIT, i);
		}
		public List<TerminalNode> CYR_LETTER() { return getTokens(stfParser.CYR_LETTER); }
		public List<TerminalNode> DIGIT() { return getTokens(stfParser.DIGIT); }
		public List<TerminalNode> PLUS() { return getTokens(stfParser.PLUS); }
		public TerminalNode DASH(int i) {
			return getToken(stfParser.DASH, i);
		}
		public WordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_word; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitWord(this);
		}
	}

	public final WordContext word() throws RecognitionException {
		WordContext _localctx = new WordContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_word);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(107);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SYMBOL) | (1L << ANY_LETTER) | (1L << CYR_LETTER))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(110); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SYMBOL) | (1L << PLUS) | (1L << ANY_LETTER) | (1L << CYR_LETTER) | (1L << DIGIT) | (1L << DASH) | (1L << DOT))) != 0)) {
				{
				{
				setState(112);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SYMBOL) | (1L << PLUS) | (1L << ANY_LETTER) | (1L << CYR_LETTER) | (1L << DIGIT) | (1L << DASH) | (1L << DOT))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(stfParser.DOT, 0); }
		public TerminalNode DIGIT(int i) {
			return getToken(stfParser.DIGIT, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(stfParser.DIGIT); }
		public TerminalNode DASH() { return getToken(stfParser.DASH, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof stfListener ) ((stfListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if (_la==DASH) {
				{
				setState(118); match(DASH);
				}
			}

			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(121); match(DIGIT);
				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGIT );
			setState(132);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(126); match(DOT);
				setState(128); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(127); match(DIGIT);
					}
					}
					setState(130); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==DIGIT );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}